# versecbot-SmileBack

./: .flake8  .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: distribution.yml
src/versecbot_smile_back/: __init__.py  jobs.py  logging.py  main.py  plugin.py  settings.py  util.py
tests/: test_config.toml  test_smile_back.py
