[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "versecbot_smile_back"
    version = "0.2"
    authors = [{ name = "Museus", email = "versecbot@museus.dev" }]
    description = "Speedrun Secretary plugin to return smiles"
    readme = "README.md"
    requires-python = ">=3.8"
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]

    license = "MIT"
    license-files = ["LICEN[CS]E*"]

    [project.urls]
        Homepage = "https://github.com/Museus/versecbot-SmileBack"
        Issues = "https://github.com/Museus/versecbot-SmileBack/issues"


    [project.entry-points.'versecbot.plugins']
        a = 'versecbot_smile_back:SmileBackPlugin'
